; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/ldns/extr_rr_functions.c_ldns_rr_set_function.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/ldns/extr_rr_functions.c_ldns_rr_set_function.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i64, i32*, i32*, i64)* @ldns_rr_set_function to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ldns_rr_set_function(i64 %0, i32* %1, i32* %2, i64 %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i64, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i64, align 8
  %10 = alloca i32*, align 8
  store i64 %0, i64* %6, align 8
  store i32* %1, i32** %7, align 8
  store i32* %2, i32** %8, align 8
  store i64 %3, i64* %9, align 8
  %11 = load i32*, i32** %7, align 8
  %12 = icmp ne i32* %11, null
  br i1 %12, label %13, label %18

13:                                               ; preds = %4
  %14 = load i32*, i32** %7, align 8
  %15 = call i64 @ldns_rr_get_type(i32* %14)
  %16 = load i64, i64* %6, align 8
  %17 = icmp ne i64 %15, %16
  br i1 %17, label %18, label %19

18:                                               ; preds = %13, %4
  store i32 0, i32* %5, align 4
  br label %26

19:                                               ; preds = %13
  %20 = load i32*, i32** %7, align 8
  %21 = load i32*, i32** %8, align 8
  %22 = load i64, i64* %9, align 8
  %23 = call i32* @ldns_rr_set_rdf(i32* %20, i32* %21, i64 %22)
  store i32* %23, i32** %10, align 8
  %24 = load i32*, i32** %10, align 8
  %25 = call i32 @ldns_rdf_deep_free(i32* %24)
  store i32 1, i32* %5, align 4
  br label %26

26:                                               ; preds = %19, %18
  %27 = load i32, i32* %5, align 4
  ret i32 %27
}

declare dso_local i64 @ldns_rr_get_type(i32*) #1

declare dso_local i32* @ldns_rr_set_rdf(i32*, i32*, i64) #1

declare dso_local i32 @ldns_rdf_deep_free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
